# redvals

./: .gitignore  CITATION.cff  LICENSE  README.md  example.py  example_2.py  main.py  pyproject.toml  redvals.py
decorated_trees/: ar53_r220_decorated.pkl  ar53_r226_decorated.pkl
examples/: example_1.py  example_2.py
red_values/: gtdbtk_r220_ar53.tsv  gtdbtk_r226_ar53.tsv
taxon_mapping/: taxon_to_node_mapping.pkl
taxon_mappings/: taxon_to_node_mapping_r220.pkl  taxon_to_node_mapping_r226.pkl
tests/: test_all.py
trees/: ar53_r220.tree  ar53_r226.tree
